--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "outDir": "./built",
     "allowJs": true,
-    "target": "es2015"
+    "target": "es2015",
+    "sourceMap": true,
+    "module":"ES2015"
   },
   "include": ["./src/**/*"]
 }
